# ESP32C3_Watch

./: README.md
Hardware/Doc/2.DATASHEET/: LCD_240240_ST7789+CPT154ips_STM32F103C8T6_3WSPI.rar
Hardware/ESP32C3Watch_VER2/: ESP32C3Watch_VER2.kicad_pcb  ESP32C3Watch_VER2.kicad_prl  ESP32C3Watch_VER2.kicad_pro  ESP32C3Watch_VER2.kicad_sch  ESP32C3Watch_VER2_BOM.csv  ESP32C3Watch_VER2_POS.csv  fp-lib-table  sym-lib-table
Hardware/ESP32C3Watch_VER2/ProjSym/3dmodels/: MAX30205MTA_T.step
Hardware/ESP32C3Watch_VER2/ProjSym/ESP-13/: ESP-C3-13.kicad_mod  esp-c3-13-4m.kicad_sym
Hardware/ESP32C3Watch_VER2/ProjSym/Espressif.pretty/: ESP32-C3-MINI-1_Hand-Soldering.kicad_mod
Hardware/ESP32C3Watch_VER2/ProjSym/symbols/: Espressif.kicad_sym  MAX30205MTA_T.kicad_sym  MAX30205MTA_T.lib  SON65P300X300X80-9N.kicad_mod  SON65P300X300X80-9N.kicad_prl  tp4056.bak  tp4056.kicad_sym
Software/lv_port_esp32/: .gitmodules
Software/lv_port_esp32/components/Driver/: CMakeLists.txt  userwifi.c  userwifi.h
Software/lv_port_esp32/components/Driver/MAX30102/: max30102.c  max30102.h
Software/lv_port_esp32/components/Driver/MAX30205/: MAX30205.h
Software/lv_port_esp32/components/Driver/MPU6050/: MPU6050.c  MPU6050.h
Software/lv_port_esp32/components/ali_iot/: README.md
Software/lv_port_esp32/components/lvgl_esp32_drivers/: lvgl_spi_conf.h
Software/lv_port_esp32/components/lvgl_esp32_drivers/lvgl_tft/: disp_driver.c  disp_spi.c  disp_spi.h  st7789.c  st7789.h  st7789_o.c.bak
Software/lv_port_esp32/main/: CMakeLists.txt  main.c
