idf_component_register(SRCS main.c)
# idf_component_register(SRCS main.c
#                     SRC_DIRS "." 
#                     INCLUDE_DIRS "." "../components" 
#                     REQUIRES generated
#                     )
# # idf_component_register(SRCS ${SOURCES}
# #                     SRC_DIRS "."
# #                     INCLUDE_DIRS ${INCLUDES}
# #                     REQUIRES generated
# #                     )